--- a/package.json
+++ b/package.json
@@ -9,28 +9,26 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@angular/common": "~2.2.1",
-    "@angular/compiler": "~2.2.1",
-    "@angular/core": "~2.2.1",
-    "@angular/forms": "~2.2.1",
-    "@angular/http": "~2.2.1",
-    "@angular/platform-browser": "~2.2.1",
-    "@angular/platform-browser-dynamic": "~2.2.1",
-    "@angular/router": "~3.2.1",
-    "@angular/upgrade": "~2.2.1",
-    "angular-in-memory-web-api": "~0.1.16",
+    "@angular/common": "~2.2.0",
+    "@angular/compiler": "~2.2.0",
+    "@angular/core": "~2.2.0",
+    "@angular/forms": "~2.2.0",
+    "@angular/http": "~2.2.0",
+    "@angular/platform-browser": "~2.2.0",
+    "@angular/platform-browser-dynamic": "~2.2.0",
+    "@angular/router": "~3.2.0",
+    "angular-in-memory-web-api": "~0.1.15",
+    "systemjs": "0.19.40",
     "core-js": "^2.4.1",
-    "primeng": "^1.0.0-rc.7",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.0-rc.4",
-    "systemjs": "^0.19.41",
-    "zone.js": "^0.7.1"
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "^0.6.26",
+    "primeng": "^1.0.0"
   },
   "devDependencies": {
-    "@types/core-js": "^0.9.34",
-    "@types/node": "^6.0.49",
     "concurrently": "^3.1.0",
     "lite-server": "^2.2.2",
-    "typescript": "^2.0.10"
+    "typescript": "^2.0.10",
+    "@types/node": "^6.0.49"
   }
 }
