--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,15 @@
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "removeComments": false,
-    "noImplicitAny": false
+    //"lib": [
+    //  "es2015",
+    //  "dom"
+    //],
+    "noImplicitAny": false,
+    "suppressImplicitAnyIndexErrors": true
   },
-  "compileOnSave": false,
-  "buildOnSave": false
+  "exclude": [
+    "node_modules/*",
+    "**/*-aot.ts"
+  ]
 }
