--- a/package.json
+++ b/package.json
@@ -10,24 +10,24 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@angular/common": "~2.3.0",
-    "@angular/compiler": "~2.3.0",
-    "@angular/core": "~2.3.0",
-    "@angular/forms": "~2.3.0",
-    "@angular/http": "~2.3.0",
-    "@angular/platform-browser": "~2.3.0",
-    "@angular/platform-browser-dynamic": "~2.3.0",
-    "@angular/router": "~3.3.0",
-    "angular-in-memory-web-api": "~0.1.17",
-    "systemjs": "0.19.40",
+    "@angular/common": "~2.3.1",
+    "@angular/compiler": "~2.3.1",
+    "@angular/core": "~2.3.1",
+    "@angular/forms": "~2.3.1",
+    "@angular/http": "~2.3.1",
+    "@angular/platform-browser": "~2.3.1",
+    "@angular/platform-browser-dynamic": "~2.3.1",
+    "@angular/router": "~3.3.1",
+    "angular-in-memory-web-api": "~0.2.1",
+    "systemjs": "0.19.41",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.0-rc.5",
-    "zone.js": "^0.6.26",
-    "primeng": "^1.0.1"
+    "rxjs": "5.0.1",
+    "zone.js": "^0.7.2",
+    "primeng": "^1.1.0"
   },
   "devDependencies": {
-    "@types/node": "^6.0.46",
+    "@types/node": "^6.0.52",
     "concurrently": "^3.1.0",
     "lite-server": "^2.2.2",
     "typescript": "^2.1.4"
